# pytojs

./: README.md
PythonToJS/: dune-project
PythonToJS/_build/: log
PythonToJS/_build/default/: PythonToJS.dune-package  PythonToJS.install  PythonToJS.opam
PythonToJS/_build/default/lib/: PythonToJS.cma  PythonToJS.cmxa  PythonToJS.cmxs  auxdefs.pp.ml  interf.ml  interf.pp.ml  lang.ml  lang.pp.ml  lexer.ml  lexer.pp.ml  parser.pp.ml  pprinter.ml  pprinter.pp.ml  pythonToJS.ml-gen  typing.pp.ml
PythonToJS/lib/: auxdefs.ml  dune  lexer.mll  parser.ml  pprinter.ml  typing.ml
PythonToJS/test/: bad.py  dune  evenodd.py  good.py
